@@ -1,3 +1,10 @@
+2015-02-19  Antoine Tremblay  <antoine.tremblay@ericsson.com>
+
+	PR breakpoints/16812
+	* linux-low.c (wstatus_maybe_breakpoint): Remove.
+	(linux_low_filter_event): Update wstatus_maybe_breakpoint name.
+	(linux_wait_1): Report SIGTRAP,SIGILL,SIGSEGV.
+
 2015-02-10  Antoine Tremblay <antoine.tremblay@ericsson.com>
 
 	PR breakpoints/15956
